Changed CSS properties and edited placeholder pictures to fit new format. Added about and contact lore episums. Fixed page resize when the scrollbar was triggered to appear.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,10 +10,12 @@ h1
 	font-size:70px;
 	text-align:center;
 	margin-top: 3%;
+	margin-bottom: 1%;
 }
 
 ul
 {
+	margin-top: 0;
 	list-style-type: none;	
 	text-align: center;
 	
@@ -29,7 +31,8 @@ ul li
 
 nav
 {
-	margin-top: 3%;
+	margin-top: 2%;
+	margin-bottom: 4%;
 }
 
 nav li
@@ -42,6 +45,7 @@ a
 {
 	text-decoration: none;
 	color: black;
+	outline: 0;
 }
 
 img
@@ -52,12 +56,37 @@ img
 
 #images
 {
-	margin-top: 80px;
-	margin-bottom: 100px;
+	margin-top: 50px;
 	margin-left: 200px;
+}
+
+#images img
+{
+	border: 4px groove;
+    border-radius: 5%;
+	background:black;
+}
+
+#wrap
+{
+	width: 60%;
+	margin: auto;
+	overflow: auto;
+	font-family: Gabriola;
+	font-size: 25px;
+	font-family: 'Courier New';
+}
+
+#contactinfo
+{
+	margin-left: 65px;
 }
 
 .line
 {
 	font-family: 'Helvatica Nue';
+}
+
+html {
+  overflow-y: scroll;
 }
